Fixed some UI bugs: Content not rendering after refresh, Text-wrap

--- a/src/assets/less/common/common.less
+++ b/src/assets/less/common/common.less
@@ -13,6 +13,7 @@ div {
 }
 
 a {
+  word-wrap: break-word;
   text-decoration: none;
   cursor: pointer !important;
 
