--- a/src/assets/less/partials/blog.less
+++ b/src/assets/less/partials/blog.less
@@ -174,6 +174,6 @@
 }
 @media screen and (max-width: 750px) {
   #blog {
-    padding: 20px;
+    padding: 80px 20px 0;
   }
 }
